syntax = "proto3";

option go_package = "fennel/lib/aggregate";

import "aggregate.proto";
import "value.proto";

message AggregateDelta {
  ProtoAggregate agg = 1;
  PVList deltas = 2;
}